--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,5 +3,5 @@ if(MAZE_BUILDER_EXAMPLES)
     add_subdirectory(MazeBuilderJS)
     add_subdirectory(CLI)
     add_subdirectory(Http)
-	add_subdirectory(Generator)
+	add_subdirectory(Snake)
 endif()
