Update README, CONTRIBUTING -- refactor API and update tests

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -51,7 +51,7 @@ set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
 set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
 
 set(DOXYGEN_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../examples/Voxels/textures")
-set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${CMAKE_CURRENT_SOURCE_DIR}/overview.md")
+set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${CMAKE_CURRENT_SOURCE_DIR}/../README.md")
 set(DOXYGEN_PROJECT_LOGO "${CMAKE_CURRENT_SOURCE_DIR}/../examples/Voxels/textures/favicon.ico")
 
 set(DOXYGEN_INLINE_SIMPLE_STRUCTS YES)
