--- a/examples/Physics/CMakeLists.txt
+++ b/examples/Physics/CMakeLists.txt
@@ -1,11 +1,11 @@
 include(FetchGitRepo)
 
 # Setup dependencies
-set(EXE_NAME "mazebuildersnake")
+set(EXE_NAME "mazebuilderphysics")
 
-set(GENERATOR_SRCS
+set(EXE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/Snake.cpp)
+	${CMAKE_CURRENT_SOURCE_DIR}/Physics.cpp)
 
 set(DEAR_IMGUI_SOURCES
   ${CMAKE_SOURCE_DIR}/deps/dearimgui/imgui.cpp
@@ -42,7 +42,7 @@ else()
         set_property(DIRECTORY "${CMAKE_BINARY_DIR}/_deps/sdl-src" PROPERTY EXCLUDE_FROM_ALL TRUE)
     endif()
 
-    add_executable(${EXE_NAME} ${GENERATOR_SRCS} ${DEAR_IMGUI_SOURCES})
+    add_executable(${EXE_NAME} ${EXE_SOURCES} ${DEAR_IMGUI_SOURCES})
     target_link_libraries(${EXE_NAME} PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${MAZE_BUILDER_CORE_LIB}_static SDL3::SDL3)
     target_compile_features(${EXE_NAME} PRIVATE cxx_std_17)
     target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
