image writing fixes part1

--- a/examples/CLI/CMakeLists.txt
+++ b/examples/CLI/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+
 # Set the name of the executable
 set(EXE_NAME "mazebuildercli")
 if(EMSCRIPTEN)
@@ -9,8 +10,8 @@ else()
     target_compile_features(${EXE_NAME} PRIVATE cxx_std_17)
     target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 
-    if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-        message(INFO ": ${CMAKE_BUILD_TYPE} - enabled ${EXE_NAME} to use -DMAZE_DEBUG flag.")
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        message(INFO ": Enabled ${EXE_NAME} to use -DMAZE_DEBUG flag.")
         target_compile_definitions(${EXE_NAME} PRIVATE "MAZE_DEBUG")
     endif()
 
