--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,9 +4,10 @@ if(CATCH2_FOUND)
     message(INFO ": Using Catch2 via find_package")
 endif()
 if(NOT CATCH2_FOUND)
-    message(INFO ": Getting Catch2 via FetchContent")
+    set(CATCH2_GIT_URL https://github.com/catchorg/Catch2.git)
+    message(INFO ": Getting Catch2 from ${CATCH2_GIT_URL}")
     include(FetchGitRepo)
-    FetchGitRepo(Catch2 https://github.com/catchorg/Catch2.git v3.8.0)
+    FetchGitRepo(Catch2 ${CATCH2_GIT_URL} v3.8.0)
     list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
 endif()
 
