fix memory leak, update buildinfo

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -67,6 +67,9 @@ if(MAZE_BUILDER_EXAMPLES)
         find_package(box2d QUIET)
         if(NOT box2d_FOUND)
             message(INFO ": Getting Box2D via FetchContent")
+            set(BOX2D_BUILD_TESTS OFF CACHE BOOL "Disable Box2D tests")
+            set(BOX2D_BUILD_EXAMPLES OFF CACHE BOOL "Disable Box2D examples")
+            set(BOX2D_BUILD_DOCS OFF CACHE BOOL "Disable Box2D documentation")
             FetchGitRepo(box2d https://github.com/erincatto/box2d.git v3.1.0)
         endif()
 
